test/scc_test/decl/semantic-errors/026.a
026.t:3:5: error: bit-field 'a' width not an integer constant